# cmake-examples

./: .gitignore  CMakeLists.txt  readme.md
01-basic/B-target-include-directories/: CMakeLists.txt  readme.md
01-basic/B-target_include_directories/include/: hi.hpp
01-basic/C-add-library/: CMakeLists.txt
01-basic/C-add-library/include/: hi.hpp
01-basic/C-add-library_shared-static/: readme.md
01-basic/C-add_library-shared-static/src/: main.cxx
01-basic/D-add-library_object/: CMakeLists.txt  add-lib-obj-exe.cmake  hi-object-lib.cmake  readme.md
01-basic/E-target_link_libraries/: CMakeLists.txt  readme.md
01-basic/E-target_link_libraries/include/: hi.hpp
01-basic/E-target_link_libraries/src/: hi.cxx
01-basic/F-install/: CMakeLists.txt  cmake-examples.conf  readme.md
01-basic/G-CMAKE_BUILD_TYPE/: CMakeLists.txt  readme.md
01-basic/H-find_package/: CMakeLists.txt  main.cxx  readme.md
01-basic/I-cmake_compiler/: CMakeLists.txt  readme.md
02-advanced/A-download-project/: CMakeLists.txt  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  readme.md
basic/hello-world/: CMakeLists.txt  main.cxx  readme.md
basic/target-include-directories/: readme.md
docker/: Dockerfile-ubuntu16.04-cmake3.10.3  readme.md
hello-world/: readme.md
